Improving webkitGetUserMedia error handling and error messages https://bugs.webkit.org/show_bug.cgi?id=130452

Reviewed by Eric Carlson.

Checking if first argument of webkitGetUserMedia is a valid Dictionary. If not, throw an exception with a
clearer message of the error.

Source/WebCore:

Test updated.

* Modules/mediastream/NavigatorMediaStream.idl:
* UseJSC.cmake:
* bindings/js/JSNavigatorCustom.cpp: Added.

LayoutTests:

* fast/mediastream/argument-types-expected.txt:
* fast/mediastream/script-tests/argument-types.js:


Canonical link: https://commits.webkit.org/148464@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165915 268f45cc-cd09-0410-ab3c-d52691b4dbfc